# Prosterno

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp
Board/: Board.cc  Board.cpp  Board.h  Board.hpp
Game/: Game.cc  Game.cpp  Game.h  Game.hpp
Piece/: BlackPiece.cc  BlackPiece.cpp  BlackPiece.h  BlackPiece.hpp  Piece.h  Piece.hpp  WhitePiece.cc  WhitePiece.cpp  WhitePiece.h  WhitePiece.hpp
Scoreboard/: Scoreboard.cc  Scoreboard.cpp  Scoreboard.h  Scoreboard.hpp
